Navbar logo and hamburger CSSd properly. It appears to be a little off as far as width. The search bar is filling 100% and the menu logo container is only filling about 96-98%. Visibillity noticable to me, I will return at a later time to fix this.

--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -9,7 +9,7 @@
 .logo__Menu__Container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .navbar__Container > input {
@@ -20,9 +20,5 @@
 }
 
 .navbar__Container > input:focus {
-    text-indent: 2.5%;
-}
-
-.navbar__Container > input::placeholder {
     text-indent: 2.5%;
 }
